--- a/week_12/gemini_config.yaml
+++ b/week_12/gemini_config.yaml
@@ -1,36 +1,52 @@
 # Gemini CLI Configuration for Todo MCP Server
 # This file configures the Gemini CLI to use your Todo MCP server
 
+# API Configuration
+apiKey: AIzaSyDXETQ77vmAMD482E1pF60pw5lbahJLdmA
+model: "gemini-2.0-flash"
+
 # MCP Servers Configuration
 mcpServers:
-  # Todo MCP Server
-  todo-server:
-    # Command to run the MCP server
-    command: python
+  # Todo MCP Server - Main Configuration
+  todo-mcp-server:
+    # Command to run the MCP server (stdio transport)
+    command: python3
     args:
-      - /Users/tayyab/Desktop/week_12/mcp_server.py
-    # Environment variables (if needed)
+      - /home/eman-aslam/Documents/FMS/lectures/week_12/mcp_server.py
+    # Environment variables
     env:
-      PYTHONPATH: /Users/tayyab/Desktop/week_12
+      PYTHONPATH: /home/eman-aslam/Documents/FMS/lectures/week_12
     # Working directory
-    cwd: /Users/tayyab/Desktop/week_12
+    cwd: /home/eman-aslam/Documents/FMS/lectures/week_12
     # Description
-    description: "Todo management MCP server with full CRUD operations"
+    description: "Todo management MCP server with full CRUD operations, integrated with FastAPI backend"
 
 # Alternative configuration using the virtual environment
 # Uncomment this section if you prefer to use the venv Python
 #  todo-server-venv:
-#    command: /Users/tayyab/Desktop/week_12/.venv/bin/python
+#    command: /home/eman-aslam/Documents/FMS/lectures/week_12/.venv/bin/python
 #    args:
-#      - /Users/tayyab/Desktop/week_12/mcp_server.py
-#    cwd: /Users/tayyab/Desktop/week_12
+#      - /home/eman-aslam/Documents/FMS/lectures/week_12/mcp_server.py
+#    cwd: /home/eman-aslam/Documents/FMS/lectures/week_12
 #    description: "Todo MCP server (using venv)"
 
 # You can also use the fastmcp CLI directly
 #  todo-server-fastmcp:
-#    command: /Users/tayyab/Desktop/week_12/.venv/bin/fastmcp
+#    command: /home/eman-aslam/Documents/FMS/lectures/week_12/.venv/bin/fastmcp
 #    args:
 #      - run
 #      - mcp_server.py:mcp
-#    cwd: /Users/tayyab/Desktop/week_12
+#    cwd: /home/eman-aslam/Documents/FMS/lectures/week_12
 #    description: "Todo MCP server (using fastmcp CLI)"
+
+# Logging configuration
+logging:
+  level: info
+  file: /home/eman-aslam/Documents/FMS/lectures/week_12/gemini_mcp.log
+
+# Features
+features:
+  # Enable MCP tool use in Gemini responses
+  enableMCPTools: true
+  # Allow Gemini to automatically call MCP tools
+  autoInvokeTools: true
